--- a/styles/variable.scss
+++ b/styles/variable.scss
@@ -42,4 +42,4 @@ $secondary-light: #ffe8a8;
 
 $header-height: 56px;
 $pc-player-controller-height: 76px;
-$mobile-player-controller-height: 260px;
+$mobile-player-controller-height: 270px;
